<resources>
    <string name="shared_prefs" translatable="false">application_preferences</string>
    <string name="app_name">Movie Viewer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="create_new_account">Create new account</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_empty_field">This field can\'t be empty</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_profile">Profile</string>
    <string name="movie_details">Movie details</string>
    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>
    <string name="empty_watchlist_message">Your watchlist is empty</string>
    <string name="search_title">Find a movie</string>
    <string name="search_message">Type a movie name</string>
    <string name="sign_out">Sign out</string>
    <string name="my_account">My account</string>
    <string name="registered_email">Registered email:</string>
    <string name="account_name">Account name:</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>